--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="zoom-container">
                     <img src="img/pcdoctor.jpg" alt="App PC Doctor" class="img-proyecto" onclick= "mostrarZoom(this.src)">
                 </div>
-                <h3> App Movíl: PC Doctor</h3>
-                <p> Aplicación de investigación realizada en android studio consiste en informacion basica e avanzada acerca de los softwares y hardware donde se especifican los tipos de errores de ambos con respecto a su codigo error y su posible solución</p>
+                <h3> App Móvil: PC Doctor</h3>
+                <p> Aplicación de investigación realizada en ANDROID STUDIO consiste en informacion básica e avanzada acerca de los softwares y hardware donde se especifican los tipos de errores de ambos con respecto a su código error y su posible solución</p>
             </div>
 
             <div class="tarjeta-proyecto">
@@ -74,8 +74,8 @@
                 <div class="zoom-container">
                     <img src="img/deteccion.PNG" alt="App Detección de Emociones" class="img-proyecto" onclick= "mostrarZoom(this.src)">
                 </div>
-                <h3> App Movíl: Detección de Emociones</h3>
-                <p> App desarrollada en Android Studio que detecta emociones en tiempo real usando machine learning y explica emociones con juegos interactivos para niños adémas de integrar APIS para envio de alerta a tutores mediante SMS</p>
+                <h3> App Móvil: Detección de Emociones</h3>
+                <p> App desarrollada en ANDROID STUDIO que detecta emociones en tiempo real usando Machine Learning y explica emociones con juegos interactivos para niños además de integrar APIS para envío de alerta a tutores mediante SMS</p>
                 
             </div>
 
