--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p> Hola, soy Jean, apasionado por la programación, desarrollo movíl y la tecnología. Me encanta crear apps funcionales y estéticamente atractivos. Actualmente en proceso de graduarme "Tesis", y este portafolio muestra parte de mi trabajo.
                 
             </div>
-            <a href="docs/Cv_Jean.pdf"  class="boton-cv" download><i class="fas fa-dowload"></i>📄 Descargar CV</a>
+            <a href="docs/JeanCv.pdf"  class="boton-cv" download><i class="fas fa-dowload"></i>📄 Descargar CV</a>
         </div>
         </section>
 
