--- a/index.html
+++ b/index.html
@@ -205,27 +205,47 @@
             <!-- Certificados Cisco -->
             <div class="cert-card">
             <h3>💻 Cisco Networking Academy</h3>
-            <ul>
-                <li>IT Essentials: PC Hardware and Software</li>
-                <li>CCNAv7: Introduction to Networks</li>
-                <li>CCNAv7: Switching, Routing and Wireless Essentials</li>
-            </ul>
-            </div>
+            <table class="tabla-estilizada">
+                <thead>
+                    <tr>
+                        <th>Certificados</th>
+                        <th>Visualizar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>IT Essentials</td>
+                        <td> <a href="docs/IT_Essentials_certificate_bermudesmora-gmail-com_a1d5020a-ca02-4b27-93de-fcede336ea55.pdf" target="_blank" class="btn">Ver Certificado</a>
+                     </td>
+                    </tr>
+                    <tr>
+                        <td>CCNAv7: Introduction to Networks</td>
+                        <td><a href="docs/CCNA-_Introduction_to_Networks_certificate_bermudesmora-gmail-com_21c92f5f-1063-4a41-a921-a1a620234f49.pdf" target="_blank" class="btn">Ver Certificado</a> </td>
+                    </tr>
+                    <tr>
+                        <td>CCNAv7: Switching, Routing and Wireless Essentials</td>
+                        <td><a href="docs/CCNA-_Switching-_Routing-_and_Wireless_Essentials_certificate_bermudesmora-gmail-com_5c665dcf-2b46-404c-babf-43a46d85be28.pdf" target="_blank" class="btn">Ver Certificado</a> </td>
+                    </tr>
+                    <tr>
+                        <td>UPS - GYE - Fundamentos de Python 1</td>
+                        <td><a href="docs/Python_Essentials_1_certificate_bermudesmora-gmail-com_dfc28856-a47d-45a7-ad20-369c70bab06a.pdf" target="_blank" class="btn">Ver Certificado</a> </td>
+                    </tr>
+                    <tr>
+                        <td>UPS - GYE - Fundamentos de Python 2</td>
+                        <td><a href="docs/Python_Essentials_2_certificate_bermudesmora-gmail-com_423a7745-8bbf-4624-b5ab-2bbf2abc1df3.pdf" target="_blank" class="btn">Ver Certificado</a> </td>
+                    </tr>
+                    <tr>
+                        <td>UPS - GYE - JavaScript Essentials 1</td>
+                        <td><a href="docs/JavaScript_Essentials_1_certificate_bermudesmora-gmail-com_69c32263-6003-46e5-91da-bc7795a80487.pdf" target="_blank" class="btn">Ver Certificado</a> </td>
+                    </tr>
+                </tbody>
 
-            <!-- Certificados AITEC -->
-            <div class="cert-card">
-            <h3>🛠️ AITEC</h3>
-            <ul>
-                <li>Ensamblaje y Mantenimiento Preventivo de Computadoras</li>
-            </ul>
+            </table>
+            
             </div>
 
         </div>
         </section>
-
-
-
-
 
      <section id="Contacto" class="contacto">
     <h2>Contacto</h2>
@@ -296,7 +316,7 @@
 <div style="position: fixed; bottom: 30px; right: 30px; z-index: 999;">
   <a href="https://www.hitwebcounter.com" target="_blank" style="pointer-events: none;">
     <img src="https://hitwebcounter.com/counter/counter.php?page=21112799&style=0001&nbdigits=8&type=page&initCount=0" title="Counter Widget"
-         title="Counter Widget" alt="Visit counter For Websites" style="width: 150px; height: auto; border: 0;" />
+         title="Counter Widget" alt="Visit counter For Websites" style="width: 200px; height: auto; border: 0;" />
   </a>
 </div>
 
