--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 
                 <h3> CRUD de Empleados</h3>
-                <p> CRUD de Empleados en ASP.NET Core (.NET 8) con Entity Framework Core y SQL Server 
+                <p> CRUD de Empleados en ASP.NET Core (.NET 8) con Entity Framework Core y SQL Server.
                     Desarrollé una aplicación web utilizando ASP.NET Core (.NET 8) que implementa un CRUD 
                     (Create, Read, Update, Delete) para la gestión de empleados.
                      La aplicación está construida bajo el patrón MVC (Modelo - Vista - Controlador) y utiliza Entity
@@ -339,4 +339,5 @@
 </div>
 
 </body>
+
 </html>
